refactor for uchicago af

--- a/configs/ttRes1L2L/statonly/ttres1L.config
+++ b/configs/ttRes1L2L/statonly/ttres1L.config
@@ -56,7 +56,7 @@ Limit: "tt1lep_limit"
   LimitBlind: TRUE
   %ParamName: "ZprimeMass"
   %ParamValue: MASS
-  OutputPrefixName: zprimeMASS
+  OutputPrefixName: zprimeZPRIMEMASS
   %POIAsimov:
 
 
