--- a/configs/ttRes1L2L/statonly/ttres1L2L.config
+++ b/configs/ttRes1L2L/statonly/ttres1L2L.config
@@ -34,5 +34,5 @@ Limit: "tt1lep2lep_limit"
   LimitBlind: TRUE
   ParamName: ZprimeMass
   ParamValue: ZPRIMEMASS
-  %OutputPrefixName: zprime750
+  OutputPrefixName: zprimeZPRIMEMASS
   %POIAsimov:
