add gluon, grav signals

--- a/configs/ttres2L/ttres2L.config
+++ b/configs/ttres2L/ttres2L.config
@@ -4,6 +4,7 @@
 
 Job: "ttRes2L_v12_fit_inverted_deltaEta_2dRew_slim_SysAll"
   InputFolder: /data/schuya/ttbar_resonance/2l/fullrun2-jan-2023/
+  InputName: ttRes2L_v12_fit_inverted_deltaEta_2dRew_slim_SysAll
   CmeLabel: "13 TeV"
   POI: "mu_Zprime"
   ReadFrom: NTUP
@@ -12,6 +13,7 @@ Job: "ttRes2L_v12_fit_inverted_deltaEta_2dRew_slim_SysAll"
   LumiLabel: "139 fb#kern[-0.5]{^{-1}}"
   MCweight: "weight"
   %OutputDir: "tbar2L_Results_Dec_2022/ttbarRes2L_blinded_Dec2022"
+  OutputDir: "OUTPUTDIR/"
   Lumi: 139000 % 36100 + 44300 + 58600
   Selection: "(Mllbb/1e3<450 && DeltaEta<1) || (Mllbb/1e3>=450 && Mllbb/1e3<1000 && DeltaEta<1.5) || (Mllbb/1e3>=1000 && Mllbb/1e3<1500 && DeltaEta<2) || (Mllbb/1e3>=1500 && Mllbb/1e3<2500 && DeltaEta<2.5) || Mllbb/1e3>=2500" % adding deltaEta selection here ==> affecting mllbb and deltaPhi
 %   PlotOptions: "NOSIG,NORMSIG,POISSONIZE,NOXERR,OPRATIO"
