--- a/configs/ttRes1L2L/uncorrelated/ttres2L.config
+++ b/configs/ttRes1L2L/uncorrelated/ttres2L.config
@@ -3,7 +3,8 @@
 % --------------- %
 
 Job: "ttRes2L_v12_fit_inverted_deltaEta_2dRew_slim_SysAll_Latest"
-  InputFolder: /afs/cern.ch/user/m/mfaraj/public/Histograms_ttbar2L_FullRun2_Asimov/
+  %InputFolder: /afs/cern.ch/user/m/mfaraj/public/Histograms_ttbar2L_FullRun2_Asimov/
+  InputFolder: /data/schuya/ttbar_resonance/2l/fullrun2/
   OutputDir: OUTPUTDIR
   CmeLabel: "13 TeV"
   POI: "mu_Zprime"
